# aumos-text-engine

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/pii_detection/: benchmark_runner.py
benchmarks/text_quality/: run_evaluation.py
src/aumos_text_engine/: __init__.py  main.py  settings.py
src/aumos_text_engine/adapters/: __init__.py  cache_manager.py  context_injector.py  document_chunker.py  entity_replacer.py  fine_tuning.py  llm_client.py  output_parser.py  pii_detector.py  prompt_templates.py  quality_evaluator.py
src/aumos_text_engine/adapters/domain_generators/: __init__.py  financial.py  legal.py  medical.py
src/aumos_text_engine/api/: __init__.py  router.py  schemas.py
src/aumos_text_engine/core/: __init__.py  interfaces.py  models.py  services.py
src/aumos_text_engine/seeds/: domain_templates.json
